Modules/Hydrogen: Updated module Info:Forum.

--- a/Info/Forum/locales/de/info/forum.ini
+++ b/Info/Forum/locales/de/info/forum.ini
@@ -11,12 +11,13 @@ buttonRemove	= "entfernen"
 heading			= "Kategorie"
 headTitle		= "Themen"
 headActions		= ""
+buttonStar		= "als wichtig markieren"
 buttonRename	= "umbenennen"
 buttonRemove	= "entfernen"
 
 
 [topic-add]
-heading			= "Neues Thema"
+heading			= "Neues Thema in der Kategorie &quot;%s&quot;"
 labelTitle		= "Titel"
 labelContent	= "Beitrag"
 labelTopicId	= "in Kategorie"
@@ -32,6 +33,7 @@ heading			= "Thema"
 buttonApprove	= "bestätigen"
 buttonRemove	= "entfernen"
 buttonEdit		= "bearbeiten"
+modifiedAt		= "zuletzt geändert: %s"
 
 [states-thread]
 -2				= "entfernt"
