Modules/Hydrogen: Updated module Manage:Content:Documents.

--- a/Manage/Content/Documents/locales/de/manage/content/document.ini
+++ b/Manage/Content/Documents/locales/de/manage/content/document.ini
@@ -16,3 +16,6 @@ buttonSave		= "hochladen"
 7				= "Die Datei konnte nicht gespeichert werden. Die Festplatte ist voll wahrscheinlich voll."
 8				= "Die Dateiendung ist nicht erlaubt."
 
+[hints]
+0				= "Dateien: Neue Dateien sollten im Dateinamen keine anderen Zeichen beinhalten außer Buchstaben, Zahlen, Punkte und Unterstriche. <b>Leerzeichen sind nicht erlaubt.</b>"
+1				= "Dateien: Neue Dateien können maximal <%?upload_max_filesize%>B groß sein, laut Server-Einstellungen. Bei Mehrbedarf bitte melden!"
