Modules/Hydrogen: Updated module Manage:Customer.

--- a/Manage/Customer/locales/de/manage/customer.ini
+++ b/Manage/Customer/locales/de/manage/customer.ini
@@ -46,6 +46,10 @@ labelEmail			= "E-Mail-Adresse"
 buttonCancel		= "zurück"
 buttonSave			= "speichern"
 
+[hints]
+0					= "Kunden: Deine Kundeneinträge kannst nur du sehen."
+1					= "Kunden: Du solltest zu jedem Kunden eine Telefonnummer haben. Idealerweise von einem Mobiltelefon."
+
 [countries]
 AF		= "AFGHANISTAN"
 AX		= "ÅLAND ISLANDS"
