Modules/Hydrogen: Updated module Manage:Customer.

--- a/Manage/Customer/locales/de/manage/customer.ini
+++ b/Manage/Customer/locales/de/manage/customer.ini
@@ -1,12 +1,17 @@
+[tabs]
+dashboard			= "Übersicht"
+edit				= "Daten"
+map					= "Karte"
+
 [sizes]
-1		= "klein"
-2		= "mittel"
-3		= "groß"
+1					= "klein"
+2					= "mittel"
+3					= "groß"
 
 [types]
-1		= "A-Kunde"
-2		= "B-Kunde"
-3		= "C-Kunde"
+1					= "A-Kunde"
+2					= "B-Kunde"
+3					= "C-Kunde"
 
 [add]
 heading				= "Neuer Kunde"
