--- a/trunk/modules/Hydrogen/Manage/Customer/locales/de/manage/customer.ini
+++ b/trunk/modules/Hydrogen/Manage/Customer/locales/de/manage/customer.ini
@@ -51,6 +51,11 @@ labelEmail			= "E-Mail-Adresse"
 buttonCancel		= "zurück"
 buttonSave			= "speichern"
 
+[index]
+heading				= "Kunden"
+buttonAdd			= "neuer Kunde"
+empty				= "Keine Kunden vorhanden."
+
 [hints]
 0					= "Kunden: Deine Kundeneinträge kannst nur du sehen."
 1					= "Kunden: Du solltest zu jedem Kunden eine Telefonnummer haben. Idealerweise von einem Mobiltelefon."
