Modules/Hydrogen: Updated module Manage:Customer:Projects.

--- a/Manage/Projects/locales/de/manage/project.ini
+++ b/Manage/Projects/locales/de/manage/project.ini
@@ -7,13 +7,13 @@
 3					= "abgeschlossen"
 
 [index]
-legend				= "Projekte"
+heading				= "Projekte"
 buttonAdd			= "neues Projekt"
 
 
 
 [filter]
-legend				= "Filter"
+heading				= "Filter"
 labelStatus			= "Status"
 buttonFilter		= "filtern"
 buttonReset			= "alle"
@@ -29,13 +29,11 @@ ASC					= "aufsteigend"
 DESC				= "absteigend"
 
 [add]
-legend				= "Projekt anlegen"
-
+heading				= "Neues Projekt"
 labelStatus			= "Status"
 labelUrl			= "URL"
 labelTitle			= "Titel"
 labelDescription	= "Beschreibung"
-
 buttonCancel		= "zurück"
 buttonSave			= "speichern"
 
@@ -44,8 +42,11 @@ msgTitleMissing		= "Das Projekt braucht einen Titel."
 msgTitleExisting	= "Ein Projekt mit dem Titel <cite>%s</cite> existiert bereits."
 
 [edit]
-legend				= "Projekt bearbeiten"
-
+heading				= "Projekt bearbeiten"
+labelStatus			= "Status"
+labelUrl			= "URL"
+labelTitle			= "Titel"
+labelDescription	= "Beschreibung"
 buttonCancel		= "zurück"
 buttonSave			= "speichern"
 
