Modules/Hydrogen: Updated module Manage:Projects.

--- a/Manage/Projects/locales/de/manage/project.ini
+++ b/Manage/Projects/locales/de/manage/project.ini
@@ -55,3 +55,7 @@ msgInvalidId		= "INVALID ID"
 msgTitleMissing		= "Das Projekt braucht einen Titel."
 msgTitleExisting	= "Ein Projekt mit dem Titel <cite>%s</cite> existiert bereits."
 
+[edit-panel-users]
+heading				= "Mitarbeiter"
+buttonAdd			= "hinzufügen"
+buttonRemove		= "entfernen"
