--- a/trunk/modules/Hydrogen/Manage/Customer/locales/de/manage/customer.ini
+++ b/trunk/modules/Hydrogen/Manage/Customer/locales/de/manage/customer.ini
@@ -50,6 +50,7 @@ labelUrl			= "URL"
 labelEmail			= "E-Mail-Adresse"
 buttonCancel		= "zurück"
 buttonSave			= "speichern"
+buttonRemove		= "entfernen"
 
 [index]
 heading				= "Kunden"
@@ -59,6 +60,7 @@ empty				= "Keine Kunden vorhanden."
 [hints]
 0					= "Kunden: Deine Kundeneinträge kannst nur du sehen."
 1					= "Kunden: Du solltest zu jedem Kunden eine Telefonnummer haben. Idealerweise von einem Mobiltelefon."
+
 
 [countries]
 AF		= "AFGHANISTAN"
