Modules/Hydrogen: Updated module module Manage:Shop.

--- a/Manage/Shop/locales/de/manage/shop/order.ini
+++ b/Manage/Shop/locales/de/manage/shop/order.ini
@@ -10,16 +10,16 @@ columnModified			= "verändert"
 
 [states]
 -6						= "-6 - zurück erstattet"
--5						= "-5 - reklamiert"
--4						= "-4 - nicht zugestellt"
--3						= "-3 - nicht bezahlt"
--2						= "-2 - zurückgezogen"
--1						= "-1 - abgebrochen"
-0						= "0 - neu"
-1						= "1 - authentifiziert"
+;-5						= "-5 - reklamiert"
+;-4						= "-4 - nicht zugestellt"
+;-3						= "-3 - nicht bezahlt"
+-2						= "-2 - storniert"
+;-1						= "-1 - abgebrochen"
+;0						= "0 - neu"
+;1						= "1 - authentifiziert"
 2						= "2 - bestellt"
 3						= "3 - bezahlt"
-4						= "4 - teilweise versandt"
+;4						= "4 - teilweise versandt"
 5						= "5 - zugestellt"
 6						= "6 - geschlossen"
 
