Modules/Hydrogen: Updated module Resource:Authentication.

--- a/Resource/Authentication/locales/de/auth.ini
+++ b/Resource/Authentication/locales/de/auth.ini
@@ -1,3 +1,9 @@
+[module]
+title						= "Authentifikation"
+config.session.refresh		= "Sitzung automatisch erhalten"
+config.logout.auto			= "Sitzung automatisch beenden"
+config.logout.auto.minutes	= "Sitzungsdauer in Minuten"
+
 [login]
 heading					= "Login"
 legend					= "Login"
