Modules/Hydrogen: updated module Work:Notes.

--- a/Work/Notes/locales/de/work/note.ini
+++ b/Work/Notes/locales/de/work/note.ini
@@ -1,9 +1,15 @@
+[formats]
+content				= "cmContent"
+markdown			= "Markdown"
+plaintext			= "Reintext"
+
 [add]
 legend				= "Neue Notiz"
 labelProjectId		= "Projekt"
 labelTitle			= "Titel"
 labelContent		= "Inhalt"
 labelPublic			= "öffentlich"
+labelFormat			= "Format"
 labelTags			= "Schlagwörter <em><small>(mit Leerzeichen getrennt)</small></em>"
 labelLinkUrl		= "Link-Adresse"
 labelLinkTitle		= "Link-Titel"
@@ -20,6 +26,7 @@ labelProjectId		= "Projekt"
 labelTitle			= "Titel"
 labelContent		= "Inhalt"
 labelPublic			= "öffentlich"
+labelFormat			= "Format"
 buttonCancel		= "zur Liste"
 
 buttonAddTag		= "hinzufügen"
