--- a/trunk/modules/Hydrogen/Work/Notes/locales/de/work/note.ini
+++ b/trunk/modules/Hydrogen/Work/Notes/locales/de/work/note.ini
@@ -4,7 +4,7 @@ markdown			= "Markdown"
 plaintext			= "Reintext"
 
 [add]
-legend				= "Neue Notiz"
+heading				= "Neue Notiz"
 labelProjectId		= "Projekt"
 labelTitle			= "Titel"
 labelContent		= "Inhalt"
@@ -21,7 +21,7 @@ msgNoContent		= "Der <label for="input_article_content">Inhalt</label> der Notiz
 msgTagsAdded		= "Der Notiz wurden folgende Tags zugewiesen: %s."
 
 [edit]
-legend				= "Notiz bearbeiten"
+heading				= "Notiz bearbeiten"
 labelProjectId		= "Projekt"
 labelTitle			= "Titel"
 labelContent		= "Inhalt"
@@ -48,6 +48,8 @@ labelPublic				= "Öffentlich"
 labelProjectId			= "Projekt"
 labelQuery				= "Suche nach...";
 labelVisibility			= "Sichtbarkeit"
+labelLimit				= "pro Seite"
+labelOrder				= "Sortierung"
 labelTagsActive			= "aktive Schlagwörter"
 labelTagsSuggested		= "Vorschläge"
 buttonTagEnableAlt		= "zuweisen"
