Modules/Hydrogen: Updated module Work:Notes.

--- a/Work/Notes/locales/de/work/note.ini
+++ b/Work/Notes/locales/de/work/note.ini
@@ -46,9 +46,9 @@ legend					= "Filter"
 labelAuthor				= "Originalautor"
 labelPublic				= "Öffentlich"
 labelProjectId			= "Projekt"
-labelQuery				= "Suche nach...";
+labelQuery				= "Suche nach..."
 labelVisibility			= "Sichtbarkeit"
-labelLimit				= "pro Seite"
+labelLimit				= "pro&nbsp;Seite"
 labelOrder				= "Sortierung"
 labelTagsActive			= "aktive Schlagwörter"
 labelTagsSuggested		= "Vorschläge"
