--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -172,6 +172,13 @@ headingEvents		= "Heutige Termine:"
 textSignature		= "dein Ceus Media Office"
 suffixTime			= "Uhr"
 
+[mail-update]
+subject				= "Änderung"
+heading				= ""
+greeting			= "Hallo %1$s, eine Aufgabe wurde verändert, der du zugewiesen bist."
+changes				= "Änderungen"
+textSignature       = "dein Ceus Media Office"
+
 [mail-salutes]
 pos0				= "Viel Erfolg!"
 pos1				= "Alles Gute!"
