Modules/Hydrogen: Updated module Work:Missions.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -32,7 +32,7 @@ labelTitle			= "Titel"
 labelContent		= "Beschreibung"
 labelLocation		= "Ort"
 labelReference		= "Referenz"
-labelWorker			= "zuweisen an"
+labelWorker			= "Bearbeiter"
 labelProjectId		= "Projekt"
 buttonCancel		= "zur Liste"
 buttonSave			= "speichern"
@@ -177,6 +177,13 @@ subject				= "Änderung"
 heading				= ""
 greeting			= "Hallo %1$s, eine Aufgabe wurde verändert, der du zugewiesen bist."
 changes				= "Änderungen"
+textSignature       = "dein Ceus Media Office"
+
+[mail-new]
+subject				= "Neue Aufgabe"
+heading				= ""
+greeting			= "Hallo %1$s, es gibt eine neue Aufgabe."
+facts				= "Fakten"
 textSignature       = "dein Ceus Media Office"
 
 [mail-salutes]
