Modules/Hydrogen: Updated module Work:Missions.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -1,9 +1,11 @@
 [module]
 title					= "Aufgaben"
-config.mail.active		= "Morgendliche E-Mail schicken"
-config.mail.hour		= "Sendestunde der morgendlichen E-Mail"
-config.mail.hour_suffix	= "icon-time"
-config.mail.html		= "E-Mail im HTML-Format"
+config.mail.active		= "E-Mails schicken"
+config.mail.html		= "E-Mails im HTML-Format"
+config.mail.daily		= "Tägliche Status-Mail"
+config.mail.daily.hour	= "Sendestunde der Status-Mail"
+config.mail.changes		= "E-Mails bei Änderungen"
+
 
 [index]
 heading				= "Missionen"
