Modules/Hydrogen: Updated module Manage:Content:Documents.

--- a/Manage/Content/Documents/locales/de/manage/content/document.ini
+++ b/Manage/Content/Documents/locales/de/manage/content/document.ini
@@ -5,6 +5,7 @@ buttonRemove	= "entfernen"
 [add]
 heading			= "Dokument hinzufügen"
 labelFile		= "Datei"
+labelFilename	= "ersetzt Datei"
 buttonSave		= "hochladen"
 
 [msgErrorUpload]
