--- a/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
+++ b/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
@@ -24,6 +24,13 @@ labelTopicId	= "in Kategorie"
 labelType		= "Typ"
 buttonSave		= "speichern"
 
+[thread-add]
+heading			= "Neuer Beitrag zum Thema &quot;%s&quot;"
+labelContent	= "Inhalt"
+labelFile		= "<b>oder</b> Bilddatei hochladen"
+buttonCancel	= "zurück"
+buttonSave		= "speichern"
+
 [types]
 0				= "normal"
 1				= "hervorgehoben"
@@ -46,3 +53,32 @@ modifiedAt		= "zuletzt geändert: %s"
 -1				= "entfernt"
 0				= "neu"
 1				= "bestätigt"
+
+
+[msg]
+successTopicAdded		= "Die Kategorie &quot;%s&quot; wurde hinzugefügt."
+successTopicRemoved		= "Die Kategorie &quot;%s&quot; wurde entfernt."
+successThreadAdded		= "Das Thema &quot;%s&quot; wurde hinzugefügt."
+successThreadRemoved	= "Das Thema &quot;%s&quot; wurde entfernt."
+successPostAdded		= "Der Beitrag wurde hinzugefügt."
+successPostRemoved		= "Der Beitrag wurde entfernt."
+
+errorAccessDenied		= "Sie haben keinen Zutritt zu diesem Bereich."
+errorInvalidTopicId		= "Die aufgerufene Kategorie existiert nicht oder nicht mehr."
+errorInvalidThreadId	= "Das aufgerufene Thema existiert nicht oder nicht mehr."
+errorInvalidPostId		= "Der aufgerufene Beitrag existiert nicht oder nicht mehr."
+errorTopicNotEmpty		= "Die Kategorie beinhaltet Themen und kann daher nicht gelöscht werden."
+errorThreadClosed		= "Das Thema wurde bereits geschlossen."
+errorImageInvalid		= "Das Bild konnte nicht verarbeitet werden."
+
+errorUpload1			= "Die hochgeladene Datei ist größer als %sB."
+errorUpload2			= "Die hochgeladene Datei ist größer als das Formular erlaubt."
+errorUpload3			= "Die Datei wurde nur teilweise hochgeladen."
+errorUpload4			= "Es wurde keine Datei hochgeladen."
+errorUpload6			= "Der temporärer Ordner auf dem Server fehlt."
+errorUpload7			= "Die hochgeladene Datei ist größer als %sB."
+errorUpload8			= "Der Upload der Datei wurde serverseitig gestoppt."
+
+
+
+
