Modules/Hydrogen: Updated module Info:Files.

--- a/Info/Files/locales/de/info/file.ini
+++ b/Info/Files/locales/de/info/file.ini
@@ -8,6 +8,9 @@ headActions			= "Aktionen"
 buttonOpenFolder	= "Ordner öffnen"
 buttonDownload		= "herunterladen"
 buttonRemove		= "entfernen"
+buttonRename		= "umbenennen"
+buttonUp			= "hoch"
+buttonDown			= "runter"
 prefixTimePhrase	= "vor "
 suffixDownloads		= " mal"
 timePhrase			= "vor %s hochgeladen"
@@ -44,3 +47,5 @@ buttonRemove		= "entfernen"
 6				= "Die Datei konnte nicht in den temporären Ordner gespeichert werden."
 7				= "Die Datei konnte nicht gespeichert werden. Die Festplatte ist voll wahrscheinlich voll."
 8				= "Die Dateiendung ist nicht erlaubt."
+
+[msg]
