Modules/Hydrogen: Update module Work:Missions.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -59,9 +59,10 @@ labelTitle			= "Titel"
 labelContent		= "Beschreibung"
 labelLocation		= "Ort"
 labelReference		= "Referenz"
-labelWorker			= "zugewiesen an"
+labelWorker			= "Bearbeiter"
 labelProjectId		= "Projekt"
-buttonCancel		= "zur Liste"
+buttonList			= "zur Liste"
+buttonCancel		= "abbrechen"
 buttonSave			= "speichern"
 buttonRemove		= "entfernen"
 msgSuccess			= "Der Eintrag wurde gespeichert."
@@ -69,6 +70,19 @@ msgSuccessClosed	= "Der Eintrag wurde geschlossen."
 msgNoContent		= "Der Inhalt fehlt."
 msgInvalidId		= "Der gewählte Eintrag existiert nicht. Weiterleitung zur Übersicht."
 msgInvalidProject	= "Der gewählte Eintrag ist einem fremden Projekt zugewiesen. Weiterleitung zur Übersicht."
+
+[edit-panel-close]
+heading				= "Abschliessen"
+labelHours			= "Arbeitsstunden"
+suffixHours			= "h"
+buttonSave			= "speichern und abschliessen"
+buttonSaveConfirm	= "Ist diese Aufgabe wirklich beendet?"
+buttonClose			= "beenden"
+buttonCloseConfirm	= "Ist diese Aufgabe wirklich beendet?"
+buttonCancel		= "abbrechen"
+buttonCancelConfirm	= "Diese Aufgabe wirklich abbrechen?"
+buttonRemove		= "entfernen"
+buttonRemoveConfirm	= "Diese Aufgabe wirklich entfernen?"
 
 [view]
 legend				= "Fakten"
