Modules/Hydrogen: Updated module Info:Files.

--- a/Info/Files/locales/de/info/file.ini
+++ b/Info/Files/locales/de/info/file.ini
@@ -49,3 +49,8 @@ buttonRemove		= "entfernen"
 8				= "Die Dateiendung ist nicht erlaubt."
 
 [msg]
+infoScanFoundSomething		= "Bei der Untersuchung wurden %s Ordner und %s Dateien entdeckt und im Index aufgenommen: %s"
+infoScanRemovedSomething	= "Bei der Untersuchung wurden %s Ordner und %s Dateien vermisst und aus dem Index entfernt: %s"
+infoScanNoChanges			= "Die Untersuchung hat keine Änderungen gefunden."
+
+
