--- a/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
+++ b/trunk/modules/Hydrogen/Work/Missions/locales/de/work/mission.ini
@@ -18,28 +18,29 @@ buttonReset			= "alle"
 suffixTime			= "Uhr"
 
 [add]
-legend				= "Aufgabe/Termin hinzufügen"
-labelType			= "Typ"
-labelPriority		= "Priorität"
-labelStatus			= "Status"
-labelDayWork		= "Tag"
-labelDayDue			= "Fällig am"
-labelDayStart		= "Starttag"
-labelDayEnd			= "Endtag"
-labelTime			= "Zeit"
-labelTimeStart		= "Startzeit"
-labelTimeEnd		= "Endzeit"
-labelHoursProjected	= "Stunden geplant"
-labelTitle			= "Titel"
-labelContent		= "Beschreibung"
-labelLocation		= "Ort"
-labelReference		= "Referenz"
-labelWorker			= "Bearbeiter"
-labelProjectId		= "Projekt"
-buttonCancel		= "zur Liste"
-buttonSave			= "speichern"
-msgSuccess			= "Die Aufgabe wurde hinzugefügt."
-msgNoContent		= "Der Inhalt fehlt."
+legend					= "Aufgabe/Termin hinzufügen"
+labelType				= "Typ"
+labelPriority			= "Priorität"
+labelStatus				= "Status"
+labelDayWork			= "Tag"
+labelDayDue				= "Fällig am"
+labelDayStart			= "Starttag"
+labelDayEnd				= "Endtag"
+labelTime				= "Zeit"
+labelTimeStart			= "Startzeit"
+labelTimeEnd			= "Endzeit"
+labelHoursProjected		= "Stunden geplant"
+labelMinutesProjected	= "Planzeit&nbsp;<small class='muted'>(hh:mm)</small>"
+labelTitle				= "Titel"
+labelContent			= "Beschreibung"
+labelLocation			= "Ort"
+labelReference			= "Referenz"
+labelWorker				= "Bearbeiter"
+labelProjectId			= "Projekt"
+buttonCancel			= "zur Liste"
+buttonSave				= "speichern"
+msgSuccess				= "Die Aufgabe wurde hinzugefügt."
+msgNoContent			= "Der Inhalt fehlt."
 
 [edit]
 legend				= "Aufgabe/Termin bearbeiten"
@@ -55,6 +56,8 @@ labelTimeStart		= "Startzeit"
 labelTimeEnd		= "Endzeit"
 labelHoursProjected	= "geplant"
 labelHoursRequired	= "benötigt"
+labelMinutesProjected	= "Planzeit&nbsp;<small class='muted'>(hh:mm)</small>"
+labelMinutesRequired	= "Arbeitszeit&nbsp;<small class='muted'>(hh:mm)</small>"
 labelTitle			= "Titel"
 labelContent		= "Beschreibung"
 labelLocation		= "Ort"
