--- a/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
+++ b/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
@@ -27,7 +27,8 @@ buttonSave		= "speichern"
 [thread-add]
 heading			= "Neuer Beitrag zum Thema &quot;%s&quot;"
 labelContent	= "Inhalt"
-labelFile		= "<b>oder</b> Bilddatei hochladen"
+labelImageFile	= "Bilddatei hochladen"
+labelImageTitle	= "Bildunterschrift"
 buttonCancel	= "zurück"
 buttonSave		= "speichern"
 
