Modules/Hydrogen: Updated module Admin:Module:Editor.

--- a/Admin/Module/Editor/locales/de/admin/module/editor.ini
+++ b/Admin/Module/Editor/locales/de/admin/module/editor.ini
@@ -94,8 +94,7 @@ legend					= "SQL hinzufügen"
 labelEvent				= "ausführen bei"
 labelType				= "DBMS"
 labelDDL				= "SQL / DDL"
-labelVersionFrom		= "von Version"
-labelVersionTo			= "auf Version"
+labelVersion			= "auf Version"
 buttonAdd				= "hinzufügen"
 
 
