--- a/trunk/modules/Hydrogen/Manage/Catalog/locales/de/manage/catalog/author.ini
+++ b/trunk/modules/Hydrogen/Manage/Catalog/locales/de/manage/catalog/author.ini
@@ -41,4 +41,13 @@ buttonAdd		= "neuer Autor"
 [upload]
 msgSuccess					= "Das Bild wurde gespeichert."
 msgErrorExtensionInvalid	= "Folgende Dateitypen sind erlaubt: jpe, jpeg, jpg, png, gif."
-msgErrorUpload				= "Die Datei konnte nicht auf dem Server gespeichert werden."
+msgErrorUpload				= "Die Datei konnte nicht auf dem Server gespeichert werden (%s)."
+
+[uploadErrors]
+1				= "Die Datei ist zu groß."
+2				= "Die Datei ist zu groß."
+3				= "Die Datei wurde nicht vollständig gesendet."
+4				= "Keine Datei ausgewählt."
+6				= "Die Datei konnte nicht in den temporären Ordner gespeichert werden."
+7				= "Die Datei konnte nicht gespeichert werden. Die Festplatte ist voll wahrscheinlich voll."
+8				= "Die Dateiendung ist nicht erlaubt."
