--- a/trunk/modules/Hydrogen/Manage/Catalog/locales/de/manage/catalog/article.ini
+++ b/trunk/modules/Hydrogen/Manage/Catalog/locales/de/manage/catalog/article.ini
@@ -2,181 +2,181 @@
 
 
 [filter]
-heading				=Veröffentlichungen
-caption				=Veröffentlichungen filtern, suchen und sortieren
-colgroup			=14%,18%,9%,31%,9%,19%
-author				=Autorname
-title				=Titel
-author_id			=Autor
-category_id			=Kategorie
-status				=Lieferstatus
-isn					=ISBN/ISSN
-publication			=Erscheinungsdatum
-publication_suffix		=&nbsp;<small>[dd.mm.yyyy]</small>
-new				=Neuerscheinung
-limit				=Anzahl
+heading					= "Veröffentlichungen"
+caption					= "Veröffentlichungen filtern, suchen und sortieren"
+colgroup				= "14%,18%,9%,31%,9%,19%"
+author					= "Autorname"
+title					= "Titel"
+author_id				= "Autor"
+category_id				= "Kategorie"
+status					= "Lieferstatus"
+isn						= "ISBN/ISSN"
+publication				= "Erscheinungsdatum"
+publication_suffix		= "&nbsp;<small>[dd.mm.yyyy]</small>"
+new						= "Neuerscheinung"
+limit					= "Anzahl"
 
-option_all			=-- alle --
-direction			=Richtung
-direction_asc			=aufsteigend
-direction_desc			=absteigend
+option_all				= "-- alle --"
+direction				= "Richtung"
+direction_asc			= "aufsteigend"
+direction_desc			= "absteigend"
 
-order				=Sortierung
-order_none			=-- keine --
-order_status			=Lieferstatus
-order_title			=Titel
-order_description		=Beschreibung
-order_link			=Link
-order_author			=Autor
-order_publication		=Erscheinungsdatum
-order_digestion			=Verarbeitung
-order_createdAt			=Erstellungdatum
-direction			=Richtung
-button_reset			=leeren
-button_search			=anzeigen
+order					= "Sortierung"
+order_none				= "-- keine --"
+order_status			= "Lieferstatus"
+order_title				= "Titel"
+order_description		= "Beschreibung"
+order_link				= "Link"
+order_author			= "Autor"
+order_publication		= "Erscheinungsdatum"
+order_digestion			= "Verarbeitung"
+order_createdAt			= "Erstellungdatum"
+direction				= "Richtung"
+button_reset			= "leeren"
+button_search			= "anzeigen"
 
 
 [authors]
-heading				=
-caption				=Autoren und Herausgeber
-authors				=Autoren hinzufügen
-editors				=Herausgeber
-head_editors			=Hg.
-head_authors			=Author
-head_remove			=entfernen
+heading					= ""
+caption					= "Autoren und Herausgeber"
+authors					= "Autoren hinzufügen"
+editors					= "Herausgeber"
+head_editors			= "Hg."
+head_authors			= "Author"
+head_remove				= "entfernen"
 
-button_cancel			=zur Liste
-button_add			=hinzufügen
-button_save			=speichern
-link_remove			=entfernen
+button_cancel			= "zur Liste"
+button_add				= "hinzufügen"
+button_save				= "speichern"
+link_remove				= "entfernen"
 
 [categories]
-heading				=
-caption				=Fachbereiche und Serien
-categories			=Zuordnungen hinzufügen
-relations			=zugeordnete Fachbereiche und Serien
-head_category			=Zuordung
-head_volume			=Band
-head_remove			=entfernen
-button_cancel			=zur Liste
-button_add			=hinzufügen
-button_save			=speichern
-button_remove			=entfernen
+heading					= ""
+caption					= "Fachbereiche und Serien"
+categories				= "Zuordnungen hinzufügen"
+relations				= "zugeordnete Fachbereiche und Serien"
+head_category			= "Zuordung"
+head_volume				= "Band"
+head_remove				= "entfernen"
+button_cancel			= "zur Liste"
+button_add				= "hinzufügen"
+button_save				= "speichern"
+button_remove			= "entfernen"
 
 
 [list]
-heading				=
-caption				=Veröffentlichungen
-head_author			=Autoren
-head_title			=Titel
-head_publication		=Erscheinung
-no_entries			=Keine Einträge gefunden.
-link_add			=neue Veröffentlichung eintragen
-link_orphans			=Artikel ohne gültige Kategorie anzeigen
+heading					= ""
+caption					= "Veröffentlichungen"
+head_author				= "Autoren"
+head_title				= "Titel"
+head_publication		= "Erscheinung"
+no_entries				= "Keine Einträge gefunden."
+link_add				= "neue Veröffentlichung eintragen"
+link_orphans			= "Artikel ohne gültige Kategorie anzeigen"
 
 
 [add]
-heading				=Veröffentlichungen
-caption				=Veröffentlichung hinzufügen
-categories			=Fachbereich / Serie
-branch_id			=Fachbereich
-order_none			=-- keine --
-topic				=Serie
-volume				=Band
-author_id			=Autor
-author_new			=oder neuer Autor
-title				=Titel
-subtitle			=Untertitel
-description			=Beschreibung
-recension			=Rezension
-publication			=Erscheinungsdatum
-publication_suffix		=&nbsp;<small>[(dd.)(mm.)aaaa]</small>
-status				=Lieferstatus
-size				=Umfang
-digestion			=Verarbeitung
-isn					=ISBN/ISSN
-isbn				=ISBN
-issn				=ISSN
-series						=Serie/Zeitschrift
-price				=Preis
-price_suffix			=&nbsp;<small>[ee.cc]&nbsp;&euro;</small>
-new							=Neuerscheinung
-language					=Sprache
-button_cancel				=zur Liste
-button_save					=speichern
+heading					= "Veröffentlichungen"
+caption					= "Veröffentlichung hinzufügen"
+categories				= "Fachbereich / Serie"
+branch_id				= "Fachbereich"
+order_none				= "-- keine --"
+topic					= "Serie"
+volume					= "Band"
+author_id				= "Autor"
+author_new				= "oder neuer Autor"
+title					= "Titel"
+subtitle				= "Untertitel"
+description				= "Beschreibung"
+recension				= "Rezension"
+publication				= "Erscheinungsdatum"
+publication_suffix		= "&nbsp;<small>[(dd.)(mm.)aaaa]</small>"
+status					= "Lieferstatus"
+size					= "Umfang"
+digestion				= "Verarbeitung"
+isn						= "ISBN/ISSN"
+isbn					= "ISBN"
+issn					= "ISSN"
+series					= "Serie/Zeitschrift"
+price					= "Preis"
+price_suffix			= "&nbsp;<small>[ee.cc]&nbsp;&euro;</small>"
+new						= "Neuerscheinung"
+language				= "Sprache"
+button_cancel			= "zur Liste"
+button_save				= "speichern"
 
 
 [edit]
-heading						=Veröffentlichung
-caption						=Veröffentlichung verändern
-categories					=Fachbereich / Serie
-branch_id					=Fachbereich
-topic_id					=Serie
-volume						=Band
-order_none					=-- keine --
-author_id					=Autor
-title						=Titel
-subtitle					=Untertitel
-description					=Beschreibung
-recension					=Rezension
-publication					=Erscheinungsdatum
-publication_suffix			=&nbsp;<small>[(dd.)(mm.)aaaa]</small>
-status						=Lieferstatus
-size						=Umfang
-digestion					=Verarbeitung
-isn							=ISBN/ISSN
-isbn						=ISBN
-issn						=ISSN
-series						=Serie/Zeitschrift
-price						=Preis
-price_suffix				=&nbsp;<small>[ee.cc]&nbsp;&euro;</small>
-cover						=Cover-Bilddatei
-new							=Neuerscheinung
-language					=Sprache
-button_cancel				=zur Liste
-button_edit					=speichern
-button_remove				=entfernen
-button_remove_confirm		=Wirklich ?
+heading						= "Veröffentlichung"
+caption						= "Veröffentlichung verändern"
+categories					= "Fachbereich / Serie"
+branch_id					= "Fachbereich"
+topic_id					= "Serie"
+volume						= "Band"
+order_none					= "-- keine --"
+author_id					= "Autor"
+title						= "Titel"
+subtitle					= "Untertitel"
+description					= "Beschreibung"
+recension					= "Rezension"
+publication					= "Erscheinungsdatum"
+publication_suffix			= "&nbsp;<small>[(dd.)(mm.)aaaa]</small>"
+status						= "Lieferstatus"
+size						= "Umfang"
+digestion					= "Verarbeitung"
+isn							= "ISBN/ISSN"
+isbn						= "ISBN"
+issn						= "ISSN"
+series						= "Serie/Zeitschrift"
+price						= "Preis"
+price_suffix				= "&nbsp;<small>[ee.cc]&nbsp;&euro;</small>"
+cover						= "Cover-Bilddatei"
+new							= "Neuerscheinung"
+language					= "Sprache"
+button_cancel				= "zur Liste"
+button_edit					= "speichern"
+button_remove				= "entfernen"
+button_remove_confirm		= "Wirklich ?"
 
 
 [upload]
-caption						=Coverbild hochladen
-cover						=Cover-Bilddatei
-button_save					=hochladen
+caption						= "Coverbild hochladen"
+cover						= "Cover-Bilddatei"
+button_save					= "hochladen"
 
 
 [uploadDocument]
-caption						=Dokument hochladen
-title						=Title
-file						=Dokument
-button_save					=hochladen
+caption						= "Dokument hochladen"
+title						= "Title"
+file						= "Dokument"
+button_save					= "hochladen"
 
 
 [addTag]
-caption						=Schlagwort hinzufügen
-title						=Schlagwort
-button_save					=speichern
+caption						= "Schlagwort hinzufügen"
+title						= "Schlagwort"
+button_save					= "speichern"
 
 [msg]
-success_added				=Die Veröffentlichung wurde hinzugefügt.
-success_edited				=Die Veröffentlichungsdaten wurden verändert.
-success_removed				=Die Veröffentlichung wurde entfernt.
-success_author_added		=Der Author wurde hinzugefügt.
-success_author_removed		=Der Author wurde entfernt.
-success_editors_saved		=Die Herausgeber wurden gespeichert.
-success_volumes_saved		=Die Bandangaben wurden gespeichert.
-success_category_added		=Die Zuordnung wurde gespeichert.
-success_category_removed	=Die Zuordnung wurde entfernt.
-success_document_added		=Das Dokument wurde gespeichert.
-success_document_removed	=Das Dokument wurde entfernt.
-success_tag_added			=Das Schlagwort wurde hinzugefügt.
-success_tag_removed			=Das Schlagwort wurde entfernt.
+success_added				= "Die Veröffentlichung wurde hinzugefügt."
+success_edited				= "Die Veröffentlichungsdaten wurden verändert."
+success_removed				= "Die Veröffentlichung wurde entfernt."
+success_author_added		= "Der Author wurde hinzugefügt."
+success_author_removed		= "Der Author wurde entfernt."
+success_editors_saved		= "Die Herausgeber wurden gespeichert."
+success_volumes_saved		= "Die Bandangaben wurden gespeichert."
+success_category_added		= "Die Zuordnung wurde gespeichert."
+success_category_removed	= "Die Zuordnung wurde entfernt."
+success_document_added		= "Das Dokument wurde gespeichert."
+success_document_removed	= "Das Dokument wurde entfernt."
+success_tag_added			= "Das Schlagwort wurde hinzugefügt."
+success_tag_removed			= "Das Schlagwort wurde entfernt."
 
-error_not_an_image			=Kein Bildformat erkannt. Erlaubte Formate: JPEG, PNG, GIF.
+error_not_an_image			= "Kein Bildformat erkannt. Erlaubte Formate: JPEG, PNG, GIF."
 
-error_already_exists		=Eine Veröffentlichung mit diesem Titel existiert bereits.
-error_image					=Fehler beim Bild-Upload.
-error_document				=Fehler beim Upload des Dokuments.
+error_already_exists		= "Eine Veröffentlichung mit diesem Titel existiert bereits."
+error_image					= "Fehler beim Bild-Upload."
+error_document				= "Fehler beim Upload des Dokuments."
 
 
 
@@ -184,88 +184,88 @@ error_document				=Fehler beim Upload des Dokuments.
 
 
 [tabs]
-details				= "Details"
-authors				= "Autoren"
-categories			= "Kategorien"
-cover				= "Coverbild"
-documents			= "Dokumente"
-tags				= "Schlagwörter"
+details						= "Details"
+authors						= "Autoren"
+categories					= "Kategorien"
+cover						= "Coverbild"
+documents					= "Dokumente"
+tags						= "Schlagwörter"
 
 [editors]
-de				=&nbsp;(Hg.)
-en				=&nbsp;(ed.)
+de							= "&nbsp;(Hg.)"
+en							= "&nbsp;(ed.)"
 
 
 [states]
--2				=nicht mehr lieferbar
--1				=im Nachdruck
-0				=lieferbar
-1				=noch nicht lieferbar
+-2							= "nicht mehr lieferbar"
+-1							= "im Nachdruck"
+0							= "lieferbar"
+1							= "noch nicht lieferbar"
 
 [types]
-0				= "Einzelveröffentlichung / Buch"
-1				= "Serie / Zeitschrift"
+0							= "Einzelveröffentlichung / Buch"
+1							= "Serie / Zeitschrift"
 
 [marks]
-0				= "keine"
-1				= "Neuerscheinung"
-2				= "Wiederauflage"
-4				= "Bestseller"
+0							= "keine"
+1							= "Neuerscheinung"
+2							= "Wiederauflage"
+4							= "Bestseller"
 
 [authorRoles]
-0				= "Autor"
-1				= "Herausgeber"
+0							= "Autor"
+1							= "Herausgeber"
 
 [add]
-heading					= ""
-labelStatus				= "Lieferstatus"
-labelTitle				= "Titel"
-labelSubtitle			= "Untertitel"
-labelDescription		= "Beschreibung"
-labelLanguages			= "Sprache(n) <small class='muted'>kommagetrennt</small>"
-labelIsn				= "ISBN/ISSN"
-labelType				= "Erscheinungsform"
-labelMark				= "Markierung"
-labelPrice				= "Preis <small class='muted'>€€.¢¢</small>"
-labelSize				= "Umfang"
-labelDigestion			= "Verarbeitung"
-labelRelease			= "Erscheinungsdatum <small class='muted'>(dd.)(mm.)aaaa</small>"
-labelRecension			= "Rezension"
-buttonCancel			= "zurück"
-buttonSave				= "speichern"
-msgSuccess				= "Die Veröffentlichung wurde hinzugefügt."
-msgErrorTitleMissing	= "Der Titel fehlt."
+heading						= ""
+labelStatus					= "Lieferstatus"
+labelTitle					= "Titel"
+labelSubtitle				= "Untertitel"
+labelDescription			= "Beschreibung"
+labelLanguages				= "Sprache(n) <small class='muted'>kommagetrennt</small>"
+labelIsn					= "ISBN/ISSN"
+labelType					= "Erscheinungsform"
+labelMark					= "Markierung"
+labelPrice					= "Preis <small class='muted'>€€.¢¢</small>"
+labelSize					= "Umfang"
+labelDigestion				= "Verarbeitung"
+labelPublication			= "Erscheinungsdatum <small class='muted'>(dd.)(mm.)aaaa</small>"
+labelRecension				= "Rezension"
+buttonCancel				= "zurück"
+buttonSave					= "speichern"
+msgSuccess					= "Die Veröffentlichung wurde hinzugefügt."
+msgErrorTitleMissing		= "Der Titel fehlt."
 
 [edit]
-heading					= ""
-labelStatus				= "Lieferstatus"
-labelTitle				= "Titel"
-labelSubtitle			= "Untertitel"
-labelDescription		= "Beschreibung"
-labelLanguages			= "Sprache(n) <small class='muted'>kommagetrennt</small>"
-labelIsn				= "ISBN/ISSN"
-labelType				= "Erscheinungsform"
-labelMark				= "Markierung"
-labelPrice				= "Preis <small class='muted'>€€.¢¢</small>"
-labelSize				= "Umfang"
-labelDigestion			= "Verarbeitung"
-labelRelease			= "Erscheinungsdatum <small class='muted'>(dd.)(mm.)aaaa</small>"
-labelRecension			= "Rezension"
-labelAuthor				= "Autor"
-labelRole				= "Rolle"
-;labelMarks				= "Markierungen"
-;labelImage				= "Coverbild"
-buttonCancel			= "zurück"
-buttonSave				= "speichern"
-buttonRemove			= "entfernen"
-msgSuccess				= "Die Informationen der Veröffentlichung wurden gespeichert."
-msgErrorTitleMissing	= "Der Titel fehlt."
+heading						= ""
+labelStatus					= "Lieferstatus"
+labelTitle					= "Titel"
+labelSubtitle				= "Untertitel"
+labelDescription			= "Beschreibung"
+labelLanguages				= "Sprache(n) <small class='muted'>kommagetrennt</small>"
+labelIsn					= "ISBN/ISSN"
+labelType					= "Erscheinungsform"
+labelMark					= "Markierung"
+labelPrice					= "Preis <small class='muted'>€€.¢¢</small>"
+labelSize					= "Umfang"
+labelDigestion				= "Verarbeitung"
+labelPublication				= "Erscheinungsdatum <small class='muted'>(dd.)(mm.)aaaa</small>"
+labelRecension				= "Rezension"
+labelAuthor					= "Autor"
+labelRole					= "Rolle"
+;labelMarks					= "Markierungen"
+;labelImage					= "Coverbild"
+buttonCancel				= "zurück"
+buttonSave					= "speichern"
+buttonRemove				= "entfernen"
+msgSuccess					= "Die Informationen der Veröffentlichung wurden gespeichert."
+msgErrorTitleMissing		= "Der Titel fehlt."
 
 [edit-documents]
 
 
 [index]
-buttonAdd				= "neue Veröffentlichung"
+buttonAdd					= "neue Veröffentlichung"
 
 [remove]
 
