--- a/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
+++ b/trunk/modules/Hydrogen/Info/Forum/locales/de/info/forum.ini
@@ -1,3 +1,7 @@
+[module]
+title						= "Forum"
+config.mail.inform.authors	= "Mail bei Antwort in Thema"
+
 [index]
 heading			= "Kategorien"
 headTitle		= "Kategorien"
