--- a/trunk/modules/Hydrogen/Manage/Catalog/locales/de/manage/catalog/category.ini
+++ b/trunk/modules/Hydrogen/Manage/Catalog/locales/de/manage/catalog/category.ini
@@ -31,9 +31,12 @@ buttonSave				= "speichern"
 buttonRemove			= "entfernen"
 msgSuccess				= "Die Kategorie wurde gespeichert."
 msgErrorLabelMissing	= "Die Bezeichnung fehlt."
+msgErrorInvalidId		= "Diese Kategorie existiert nicht."
 
 [index]
 buttonAdd				= "neue Kategorie";
 
 [remove]
+msgSuccess				= "Die Kategorie &quot;%s&quot; wurde entfernt."
+msgErrorInvalidId       = "Diese Kategorie existiert nicht."
 msgErrorNotEmpty		= "Die Kategorie ist nicht leer und kann daher nicht entfernt werden."
