--- a/trunk/modules/Hydrogen/Work/Bills/locales/de/work/bill.ini
+++ b/trunk/modules/Hydrogen/Work/Bills/locales/de/work/bill.ini
@@ -3,8 +3,8 @@
 1				= "gezahlt"
 
 [types]
-0				= "an andere"
-1				= "von anderen"
+0				= "Einnahme"
+1				= "Ausgabe"
 
 [index]
 heading			= "Rechnungen"
@@ -43,4 +43,32 @@ labelPrice		= "Betrag"
 labelDate		= "fällig"
 buttonSave		= "speichern"
 buttonCancel	= "zurück"
+
+[months]
+1                   = "Januar"
+2                   = "Februar"
+3                   = "März"
+4                   = "April"
+5                   = "Mai"
+6                   = "Juni"
+7                   = "Juli"
+8                   = "August"
+9                   = "September"
+10                  = "Oktober"
+11                  = "November"
+12                  = "Dezember"
+
+[months-short]
+1                   = "Jan"
+2                   = "Feb"
+3                   = "Mär"
+4                   = "Apr"
+5                   = "Mai"
+6                   = "Jun"
+7                   = "Jul"
+8                   = "Aug"
+9                   = "Sep"
+10                  = "Okt"
+11                  = "Nov"
+12                  = "Dez"
 
