Modules/Hydrogen: Updated module Work:Bills.

--- a/Work/Bills/locales/de/work/bill.ini
+++ b/Work/Bills/locales/de/work/bill.ini
@@ -6,6 +6,10 @@
 0				= "Einnahme"
 1				= "Ausgabe"
 
+[tabs]
+list			= "Liste und Filter"
+graph			= "Prognose-Graph"
+
 [index]
 heading			= "Rechnungen"
 buttonAdd		= "neue Rechnung"
