Modules/Hydrogen: Updated module Work:Bills.

--- a/Work/Bills/locales/de/work/bill.ini
+++ b/Work/Bills/locales/de/work/bill.ini
@@ -20,6 +20,8 @@ labelType		= "Typ"
 labelStatus		= "Status"
 labelStart		= "Startdatum"
 labelEnd		= "Enddatum"
+labelOrder		= "Sortierung"
+labelDirection	= "Richtung"
 buttonFilter	= "filtern"
 buttonReset		= "alle"
 
