Modules/Hydrogen: Updated module Manage:Catalog.

--- a/Manage/Catalog/locales/de/manage/catalog/category.ini
+++ b/Manage/Catalog/locales/de/manage/catalog/category.ini
@@ -19,6 +19,7 @@ msgErrorLabelMissing	= "Die Bezeichnung fehlt."
 
 [edit]
 heading					= "Kategorie verändern"
+headingArticles			= "In dieser Kategorie"
 labelParentId			= "Fachbereich"
 labelIssn				= "ISSN"
 labelPublisher			= "Herausgeber"
@@ -34,7 +35,7 @@ msgErrorLabelMissing	= "Die Bezeichnung fehlt."
 msgErrorInvalidId		= "Diese Kategorie existiert nicht."
 
 [index]
-buttonAdd				= "neue Kategorie";
+buttonAdd				= "neue Kategorie"
 
 [remove]
 msgSuccess				= "Die Kategorie &quot;%s&quot; wurde entfernt."
