Modules/Hydrogen: Updated module Work:Missions.

--- a/Work/Missions/locales/de/work/mission.ini
+++ b/Work/Missions/locales/de/work/mission.ini
@@ -66,6 +66,7 @@ labelWorker			= "Bearbeiter"
 labelProjectId		= "Projekt"
 buttonList			= "zur Liste"
 buttonCancel		= "abbrechen"
+buttonView			= "anzeigen"
 buttonSave			= "speichern"
 buttonRemove		= "entfernen"
 msgSuccess			= "Der Eintrag wurde gespeichert."
@@ -105,6 +106,7 @@ labelWorker			= "zugewiesen an"
 labelViewers		= "sichtbar für"
 labelProjectId		= "Projekt"
 buttonCancel		= "zur Liste"
+buttonEdit			= "bearbeiten"
 
 [types]
 0					= "Aufgabe"
@@ -179,6 +181,15 @@ remove				= "entfernen"
 4					= "Donnerstag"
 5					= "Freitag"
 6					= "Samstag"
+
+[days-short]
+0					= "So"
+1					= "Mo"
+2					= "Di"
+3					= "Mi"
+4					= "Do"
+5					= "Fr"
+6					= "Sa"
 
 [mail-daily]
 subject				= "Aufgaben und Termin"
