--- a/trunk/modules/Hydrogen/Admin/Mail/locales/de/admin/mail/attachment.ini
+++ b/trunk/modules/Hydrogen/Admin/Mail/locales/de/admin/mail/attachment.ini
@@ -19,6 +19,7 @@ heading					= "Neue Datei für Anhang"
 labelClass				= "Mail-Klasse"
 labelFile				= "neue Datei"
 labelFolder				= "in Ordner"
+hintMimeType			= "Der MIME-Type wird automatisch festgestellt."
 buttonCancel			= "zurück"
 buttonSave				= "hochladen"
 
